--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   },
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "ng serve dev-app",
+    "start:module": "ng serve dev-module-app",
     "build": "yarn build:lib && yarn build:dev-app",
     "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s",
     "changelog:all": "conventional-changelog -p angular -i CHANGELOG.md -s -r 0",
@@ -30,7 +31,8 @@
     "release": "node scripts/release.js",
     "release:alpha": "node scripts/release.js --preId alpha",
     "release:beta": "node scripts/release.js --preId beta",
-    "prepare": "husky || true"
+    "prepare": "husky || true",
+    "serve:ssr:dev-module-app": "node dist/dev-module-app/server/server.mjs"
   },
   "private": true,
   "dependencies": {
@@ -66,7 +68,7 @@
     "@schematics/angular": "^17.1.1",
     "@types/express": "^4.17.17",
     "@types/jasmine": "~5.1.0",
-    "@types/node": "^20.11.16",
+    "@types/node": "^18.18.0",
     "@typescript-eslint/eslint-plugin": "6.19.0",
     "@typescript-eslint/parser": "6.19.0",
     "angular-cli-ghpages": "^2.0.0-beta.2",
