feat: migrate to standalone component

--- a/angular.json
+++ b/angular.json
@@ -230,6 +230,9 @@
         },
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
+          "options": {
+            "port": 4201
+          },
           "configurations": {
             "production": {
               "buildTarget": "dev-module-app:build:production"
