--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "ng": "ng",
     "start": "ng serve dev-app",
     "start:module": "ng serve dev-module-app",
-    "build": "yarn build:lib && yarn build:dev-app",
+    "build": "yarn build:lib && yarn build:dev-app && yarn build:dev-module-app",
     "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s",
     "changelog:all": "conventional-changelog -p angular -i CHANGELOG.md -s -r 0",
     "test": "ng test",
@@ -16,6 +16,7 @@
     "lint:fix": "ng lint angular-toaster --fix && ng lint dev-app --fix",
     "e2e": "ng e2e",
     "build:dev-app": "ng build dev-app",
+    "build:dev-module-app": "ng build dev-module-app",
     "build:lib": "ng build angular-toaster --configuration production",
     "build:schematics": "tsc -p ./packages/angular-toaster/schematics/tsconfig.json --outDir dist/angular-toaster/schematics",
     "test:schematics": "ts-node --project packages/angular-toaster/schematics/tsconfig.spec.json node_modules/jasmine/bin/jasmine.js packages/angular-toaster/schematics/**/*.spec.ts",
