--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "ng": "ng",
     "start": "ng serve dev-app",
     "start:module": "ng serve dev-module-app",
-    "build": "yarn build:lib && yarn build:dev-app && yarn build:dev-module-app",
+    "build": "yarn build:lib && yarn build:schematics && yarn build:dev-app && yarn build:dev-module-app",
     "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s",
     "changelog:all": "conventional-changelog -p angular -i CHANGELOG.md -s -r 0",
     "test": "ng test",
